--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 bundler_args: --without development
-before_install: rm Gemfile.lock || true
+before_install:
+  - rm Gemfile.lock || true
+  - gem update bundler
 script: "bundle exec rake test"
 rvm:
   - 1.8.7
