--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,27 @@
+---
 language: ruby
-bundler_args: --without development
-before_install: rm Gemfile.lock || true
-script: "bundle exec rake test"
-rvm:
-  - 1.8.7
-  - 1.9.3
-  - 2.0.0
-env:
-  - PUPPET_GEM_VERSION="~> 2.7.0"
-  - PUPPET_GEM_VERSION="~> 3.1.0"
-  - PUPPET_GEM_VERSION="~> 3.2.0"
-  - PUPPET_GEM_VERSION="~> 3.3.0"
-  - PUPPET_GEM_VERSION="~> 3.4.0"
-  - PUPPET_GEM_VERSION="~> 3.5.0"
-  - PUPPET_GEM_VERSION="~> 3.6.0"
+sudo: false
+cache: bundler
+bundler_args: --without system_tests
+script: bundle exec rake release_checks
 matrix:
-  exclude:
-    - rvm: 2.0.0
-      env: PUPPET_GEM_VERSION="~> 3.1.0"
-    - rvm: 2.0.0
-      env: PUPPET_GEM_VERSION="~> 2.7.0"
-    - rvm: 1.9.3
-      env: PUPPET_GEM_VERSION="~> 2.7.0"
+  fast_finish: true
+  include:
+    - rvm: 2.1.6
+      env: PUPPET_GEM_VERSION="~> 4.0" STRICT_VARIABLES="yes"
+    - rvm: 2.4.2
+      env: PUPPET_GEM_VERSION="~> 5.0" STRICT_VARIABLES="yes"
+    - rvm: 2.4.2
+      sudo: required
+      services: docker
+      env: BEAKER_set="centos-6-x64-docker"
+      bundler_args:
+      script: sudo service docker restart ; sleep 10 ; bundle exec rake beaker
+    - rvm: 2.4.2
+      sudo: required
+      services: docker
+      env: BEAKER_set="centos-7-x64-docker"
+      bundler_args:
+      script: sudo service docker restart ; sleep 10 ; bundle exec rake beaker
 notifications:
   email: false
