--- a/spec/acceptance/nodesets/centos-6-x64.yml
+++ b/spec/acceptance/nodesets/centos-6-x64.yml
@@ -1,7 +1,7 @@
 HOSTS:
   centos-6-x64:
     roles:
-      - master
+      - agent
     platform: el-6-x86_64
     box: puppetlabs/centos-6.6-64-nocm
     box_url: https://vagrantcloud.com/puppetlabs/boxes/centos-6.6-64-nocm
