--- a/.sync.yml
+++ b/.sync.yml
@@ -1,6 +1,9 @@
 ---
 .travis.yml:
+  dist: xenial
   deploy: false
+  docker_defaults:
+    dist: xenial
   docker_sets:
     - set: centos-7
       collection: puppet5
@@ -10,6 +13,26 @@
       collection: puppet5
     - set: centos-6
       collection: puppet6
+    - set: debian-8
+      collection: puppet5
+    - set: debian-8
+      collection: puppet6
+    - set: debian-9
+      collection: puppet5
+    - set: debian-9
+      collection: puppet6
+    - set: ubuntu-1404
+      collection: puppet5
+    - set: ubuntu-1404
+      collection: puppet6
+    - set: ubuntu-1604
+      collection: puppet5
+    - set: ubuntu-1604
+      collection: puppet6
+    - set: ubuntu-1804
+      collection: puppet5
+    - set: ubuntu-1804
+      collection: puppet6
 .gitlab-ci.yml:
   delete: true
 appveyor.yml:
@@ -17,14 +40,4 @@ appveyor.yml:
 spec/spec_helper_acceptance.rb:
   spec_overrides:
     - "proj_root = File.expand_path(File.join(File.dirname(__FILE__), '..'))"
-    - "copy_root_module_to(hosts, :source => File.join(proj_root, 'tests/site_munge'), :module_name => 'site_munge', :ignore_list => [])"
-spec/acceptance/nodesets/debian-8.yml:
-  delete: true
-spec/acceptance/nodesets/debian-9.yml:
-  delete: true
-spec/acceptance/nodesets/ubuntu-1404.yml:
-  delete: true
-spec/acceptance/nodesets/ubuntu-1604.yml:
-  delete: true
-spec/acceptance/nodesets/ubuntu-1804.yml:
-  delete: true
+    - "copy_root_module_to(hosts, source: File.join(proj_root, 'tests/site_munge'), module_name: 'site_munge', ignore_list: [])"
