--- a/spec/acceptance/nodesets/centos-6.yml
+++ b/spec/acceptance/nodesets/centos-6.yml
@@ -9,7 +9,7 @@ HOSTS:
     docker_cmd:
       - '/sbin/init'
     docker_image_commands:
-      - 'yum install -y wget'
+      - 'yum install -y wget which cronie'
     docker_container_name: 'munge-el6'
 CONFIG:
   log_level: debug
