--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,25 @@
 ---
+os: linux
 dist: xenial
 language: ruby
 cache: bundler
 before_install:
   - bundle -v
   - rm -f Gemfile.lock
+  - "# Update system gems if requested. This is useful to temporarily workaround troubles in the test runner"
+  - "# See https://github.com/puppetlabs/pdk-templates/commit/705154d5c437796b821691b707156e1b056d244f for an example of how this was used"
+  - "# Ignore exit code of SIGPIPE'd yes to not fail with shell's pipefail set"
+  - '[ -z "$RUBYGEMS_VERSION" ] || (yes || true) | gem update --system $RUBYGEMS_VERSION'
   - gem --version
   - bundle -v
 script:
   - 'bundle exec rake $CHECK'
 bundler_args: --without system_tests
 rvm:
-  - 2.5.3
+  - 2.5.7
+env:
+  global:
+    - FACTER_GEM_VERSION="< 4.0"
 stages:
   - static
   - spec
@@ -19,14 +27,14 @@ stages:
   -
     if: tag =~ ^v\d
     name: deploy
-matrix:
+jobs:
   fast_finish: true
   include:
     -
       bundler_args: --with system_tests
       dist: xenial
       env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet5 BEAKER_set=centos-6 BEAKER_TESTMODE=apply
-      rvm: 2.5.3
+      rvm: 2.5.7
       script: bundle exec rake beaker
       services: docker
       stage: acceptance
@@ -35,7 +43,7 @@ matrix:
       bundler_args: --with system_tests
       dist: xenial
       env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet6 BEAKER_set=centos-6 BEAKER_TESTMODE=apply
-      rvm: 2.5.3
+      rvm: 2.5.7
       script: bundle exec rake beaker
       services: docker
       stage: acceptance
@@ -44,7 +52,7 @@ matrix:
       bundler_args: --with system_tests
       dist: xenial
       env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet5 BEAKER_set=centos-7 BEAKER_TESTMODE=apply
-      rvm: 2.5.3
+      rvm: 2.5.7
       script: bundle exec rake beaker
       services: docker
       stage: acceptance
@@ -53,7 +61,7 @@ matrix:
       bundler_args: --with system_tests
       dist: xenial
       env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet6 BEAKER_set=centos-7 BEAKER_TESTMODE=apply
-      rvm: 2.5.3
+      rvm: 2.5.7
       script: bundle exec rake beaker
       services: docker
       stage: acceptance
@@ -62,7 +70,7 @@ matrix:
       bundler_args: --with system_tests
       dist: xenial
       env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet5 BEAKER_set=centos-8 BEAKER_TESTMODE=apply
-      rvm: 2.5.3
+      rvm: 2.5.7
       script: bundle exec rake beaker
       services: docker
       stage: acceptance
@@ -71,7 +79,7 @@ matrix:
       bundler_args: --with system_tests
       dist: xenial
       env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet6 BEAKER_set=centos-8 BEAKER_TESTMODE=apply
-      rvm: 2.5.3
+      rvm: 2.5.7
       script: bundle exec rake beaker
       services: docker
       stage: acceptance
@@ -80,7 +88,7 @@ matrix:
       bundler_args: --with system_tests
       dist: xenial
       env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet5 BEAKER_set=debian-8 BEAKER_TESTMODE=apply
-      rvm: 2.5.3
+      rvm: 2.5.7
       script: bundle exec rake beaker
       services: docker
       stage: acceptance
@@ -89,7 +97,7 @@ matrix:
       bundler_args: --with system_tests
       dist: xenial
       env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet6 BEAKER_set=debian-8 BEAKER_TESTMODE=apply
-      rvm: 2.5.3
+      rvm: 2.5.7
       script: bundle exec rake beaker
       services: docker
       stage: acceptance
@@ -98,7 +106,7 @@ matrix:
       bundler_args: --with system_tests
       dist: xenial
       env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet5 BEAKER_set=debian-9 BEAKER_TESTMODE=apply
-      rvm: 2.5.3
+      rvm: 2.5.7
       script: bundle exec rake beaker
       services: docker
       stage: acceptance
@@ -107,7 +115,7 @@ matrix:
       bundler_args: --with system_tests
       dist: xenial
       env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet6 BEAKER_set=debian-9 BEAKER_TESTMODE=apply
-      rvm: 2.5.3
+      rvm: 2.5.7
       script: bundle exec rake beaker
       services: docker
       stage: acceptance
@@ -116,7 +124,7 @@ matrix:
       bundler_args: --with system_tests
       dist: xenial
       env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet5 BEAKER_set=debian-10 BEAKER_TESTMODE=apply
-      rvm: 2.5.3
+      rvm: 2.5.7
       script: bundle exec rake beaker
       services: docker
       stage: acceptance
@@ -125,7 +133,7 @@ matrix:
       bundler_args: --with system_tests
       dist: xenial
       env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet6 BEAKER_set=debian-10 BEAKER_TESTMODE=apply
-      rvm: 2.5.3
+      rvm: 2.5.7
       script: bundle exec rake beaker
       services: docker
       stage: acceptance
@@ -134,7 +142,7 @@ matrix:
       bundler_args: --with system_tests
       dist: xenial
       env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet5 BEAKER_set=ubuntu-1604 BEAKER_TESTMODE=apply
-      rvm: 2.5.3
+      rvm: 2.5.7
       script: bundle exec rake beaker
       services: docker
       stage: acceptance
@@ -143,7 +151,7 @@ matrix:
       bundler_args: --with system_tests
       dist: xenial
       env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet6 BEAKER_set=ubuntu-1604 BEAKER_TESTMODE=apply
-      rvm: 2.5.3
+      rvm: 2.5.7
       script: bundle exec rake beaker
       services: docker
       stage: acceptance
@@ -152,7 +160,7 @@ matrix:
       bundler_args: --with system_tests
       dist: xenial
       env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet5 BEAKER_set=ubuntu-1804 BEAKER_TESTMODE=apply
-      rvm: 2.5.3
+      rvm: 2.5.7
       script: bundle exec rake beaker
       services: docker
       stage: acceptance
@@ -161,7 +169,7 @@ matrix:
       bundler_args: --with system_tests
       dist: xenial
       env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet6 BEAKER_set=ubuntu-1804 BEAKER_TESTMODE=apply
-      rvm: 2.5.3
+      rvm: 2.5.7
       script: bundle exec rake beaker
       services: docker
       stage: acceptance
@@ -171,11 +179,11 @@ matrix:
       stage: static
     -
       env: PUPPET_GEM_VERSION="~> 5.0" CHECK=parallel_spec
-      rvm: 2.4.5
+      rvm: 2.4.9
       stage: spec
     -
       env: PUPPET_GEM_VERSION="~> 6.0" CHECK=parallel_spec
-      rvm: 2.5.3
+      rvm: 2.5.7
       stage: spec
     -
       env: DEPLOY_TO_FORGE=yes
@@ -188,7 +196,7 @@ notifications:
   email: treydock@gmail.com
 deploy:
   provider: puppetforge
-  user: treydock
+  username: treydock
   password:
     secure: "JAuMBsjZPxdFvs9kekGE8vlyO6I2W7cczDr8kSvUOXmsYVRQwSLIgCKF1diXdTq35PZ/423dlwdZNjb9mWazl2AB6TZW/TrdB3R+j6T5Qrt3UKj9Vo4WeM34wdb/YWyj8yY7VopfP1bP159vEWOT3SfTS4nySJfhHZF/dhKlT2Q="
   on:
