--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,10 +48,9 @@ jobs:
       matrix:
         set:
           - "centos-7"
-          - "centos-8"
+          - "rocky-8"
           - "debian-9"
           - "debian-10"
-          - "ubuntu-1604"
           - "ubuntu-1804"
           - "ubuntu-2004"
         puppet:
