BREAKING: Major updates - read description * Drop Puppet 6 * Add Puppet 8 * Drop Debian 9 * Drop Ubuntu 18.04

--- a/.sync.yml
+++ b/.sync.yml
@@ -2,15 +2,14 @@
 .github/workflows/ci.yaml:
   acceptance_matrix:
     set:
-      - centos-7
-      - rocky-8
-      - debian-9
+      - el7
+      - el8
+      - ---el9
       - debian-10
-      - ubuntu-1804
       - ubuntu-2004
     puppet:
-      - puppet6
       - puppet7
+      - puppet8
 .gitlab-ci.yml:
   delete: true
 appveyor.yml:
@@ -19,3 +18,9 @@ spec/spec_helper_acceptance.rb:
   spec_overrides:
     - "proj_root = File.expand_path(File.join(File.dirname(__FILE__), '..'))"
     - "copy_root_module_to(hosts, source: File.join(proj_root, 'tests/site_munge'), module_name: 'site_munge', ignore_list: [])"
+spec/acceptance/nodesets/el9.yml:
+  delete: true
+spec/acceptance/nodesets/debian-11.yml:
+  delete: true
+spec/acceptance/nodesets/ubuntu-2204.yml:
+  delete: true
